# Notebook-MCP

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
prps/: INITIAL_personal_notebook_mcp.md
prps/personal_notebook_mcp/execution/: EXECUTION_SUMMARY.md  TASK10_COMPLETION.md  TASK11_COMPLETION.md  TASK12_COMPLETION.md  TASK1_COMPLETION.md  TASK2_COMPLETION.md  TASK3_COMPLETION.md  TASK4_COMPLETION.md  TASK5_COMPLETION.md  TASK6_COMPLETION.md  TASK7_COMPLETION.md  TASK8_COMPLETION.md  TASK9_COMPLETION.md  execution-plan.md  validation-report.md
src/: __init__.py  config.py  models.py  server.py
src/inbox/: __init__.py  processor.py  router.py
src/mcp/: __init__.py
src/mcp/tools/: README.md  __init__.py  inbox.py  moc.py  search.py  vault.py
src/vault/: __init__.py  manager.py  moc_generator.py  tag_analyzer.py
src/vector/: __init__.py  qdrant_client.py
tests/: __init__.py  test_api.py  test_inbox_processor.py  test_inbox_router.py  test_moc_generator.py  test_models.py  test_qdrant_client.py  test_tag_analyzer.py  test_vault_manager.py
